fdo#44582 fixing horizontal scroll bar in sub windows

Change-Id: Ifea57dec77c5b23771684a1e46267f8431478075
Reviewed-on: https://gerrit.libreoffice.org/1806
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-on: https://gerrit.libreoffice.org/1908
Tested-by: Lior Kaplan <kaplanlior@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@suse.cz>