vcl/unx/gtk/gdi/salnativewidgets-gtk.cxx
@@ -1041,7 +1041,12 @@ sal_Bool GtkSalGraphics::getNativeControlRegion(  ControlType nType,
             rNativeContentRegion.Right() = rNativeContentRegion.Left() + 1;
         if (!rNativeContentRegion.GetHeight())
             rNativeContentRegion.Bottom() = rNativeContentRegion.Top() + 1;
-        returnVal = sal_True;
+
+        returnVal = true;
+
+        //See fdo#44582, Horizontal scrollbar in navigator window is broken
+        if ((nPart==PART_BUTTON_LEFT || nPart==PART_BUTTON_RIGHT) && Application::GetSettings().GetLayoutRTL())
+            returnVal = false;
     }
     if( (nType == CTRL_MENUBAR) && (nPart == PART_ENTIRE_CONTROL) )
     {
